forgot to push updated index.html from previous commit

--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-aug29.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
+<p><a href="slides-azpoliak/lecture00_introduction_08_30.pdf">Lecture 00 slides (Poliak)</a></p>
+</li>
+<li>
 <p>Lab activity: Setting up your development environment</p>
 </li>
 </ul>
@@ -810,7 +813,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-28 17:39:53 -0400
+Last updated 2022-08-29 20:54:53 -0400
 </div>
 </div>
 </body>
