azpoliak: aug29th lec notes

--- a/notes-azpoliak/notes-aug29.html
+++ b/notes-azpoliak/notes-aug29.html
@@ -14,7 +14,13 @@
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
-<li><a href="#_tuesday_aug_30th">Tuesday Aug 30th</a></li>
+<li><a href="#_tuesday_aug_30th">Tuesday Aug 30th</a>
+<ul class="sectlevel2">
+<li><a href="#_terminal_commands">Terminal commands</a></li>
+<li><a href="#_compiling_and_running_a_java_program">Compiling and running a java program</a></li>
+</ul>
+</li>
+<li><a href="#_thursday_sep_1st">Thursday Sep 1st</a></li>
 </ul>
 </div>
 </div>
@@ -29,12 +35,46 @@
 </li>
 </ul>
 </div>
+<div class="sect2">
+<h3 id="_terminal_commands">Terminal commands</h3>
+<div class="ulist">
+<ul>
+<li>
+<p><code>ls</code> - list files in the current directory</p>
+</li>
+<li>
+<p><code>cd &lt;optional directory name&gt;</code> - move to the listed directory. If no directory is given, you will be moved to your home directory</p>
+</li>
+<li>
+<p><code>cat &lt;file name&gt;</code> - print the contents of the file name</p>
+</li>
+<li>
+<p><code>pwd</code> - print the path to the working directory</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_compiling_and_running_a_java_program">Compiling and running a java program</h3>
+<div class="paragraph">
+<p>Run <code>javac &lt;filename&gt;</code> in terminal. This will create a <code>class</code> file. Make sure the filename ends in <code>.java</code> and has a main method. Also, make sure the class name in the file matches the name of the file (except for the class name should not have .java)</p>
+</div>
+<div class="paragraph">
+<p>Run <code>java &lt;className&gt;</code>. Make sure to not include <code>.class</code></p>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_thursday_sep_1st">Thursday Sep 1st</h2>
+<div class="sectionbody">
+
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-29 22:06:17 -0400
+Last updated 2022-08-30 17:22:01 -0400
 </div>
 </div>
 </body>
