azpoliak notes: added attendance link for sep1

--- a/notes-azpoliak/notes-aug29.html
+++ b/notes-azpoliak/notes-aug29.html
@@ -68,13 +68,19 @@
 <div class="sect1">
 <h2 id="_thursday_sep_1st">Thursday Sep 1st</h2>
 <div class="sectionbody">
-
+<div class="ulist">
+<ul>
+<li>
+<p>Attendance sheet - <a href="https://forms.gle/7aPq9pK27HxxNQZN7" class="bare">https://forms.gle/7aPq9pK27HxxNQZN7</a></p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-30 17:22:01 -0400
+Last updated 2022-08-31 13:27:07 -0400
 </div>
 </div>
 </body>
