--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-aug29.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture00_introduction_08_30.pdf">Lecture 00 slides (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture00_introduction_08_30.pdf">Lecture 00 slides (Poliak)</a> <a href="slides-azpoliak/lecture01_09_01.pdf">Lecture 01 slides (Poliak)</a></p>
 </li>
 <li>
 <p>Lab activity: Setting up your development environment</p>
