--- a/schedule.html
+++ b/schedule.html
@@ -481,7 +481,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-aug29.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture00_introduction_08_30.pdf">Lecture 00 slides (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture00_introduction_08_30.pdf">Lecture 00 slides (Poliak)</a> <a href="slides-azpoliak/lecture01_09_01.pdf">Lecture 01 slides (Poliak)</a></p>
 </li>
 <li>
 <p>Lab activity: Setting up your development environment</p>
@@ -846,7 +846,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-30 12:19:04 -0400
+Last updated 2022-08-31 13:30:16 -0400
 </div>
 </div>
 </body>
