fix broken links

--- a/asst00.html
+++ b/asst00.html
@@ -127,13 +127,13 @@ introduction channel, say and introduce yourself:</p>
 <div class="sect2">
 <h3 id="_read_the_website">2.2. Read the website</h3>
 <div class="paragraph">
-<p>Start by reading through <strong>all</strong> of the <a href="../index.html">class webpage</a>!
+<p>Start by reading through <strong>all</strong> of the <a href="./index.html">class webpage</a>!
 Bookmark this page on your browser, or use some other method that helps you
 keep this information handy. All course materials and announcements will be
 posted on the course webpage!</p>
 </div>
 <div class="paragraph">
-<p>Pay special attention to the <a href="../index.html#_schedule">Schedule</a>.</p>
+<p>Pay special attention to the <a href="./index.html#_schedule">Schedule</a>.</p>
 </div>
 </div>
 <div class="sect2">
@@ -148,7 +148,7 @@ posted on the course webpage!</p>
 <p>This class will teach the fundamentals of programming using Java.</p>
 </div>
 <div class="paragraph">
-<p><a href="../develEnvSetup.html">Use these instructions to set-up your development environment.</a></p>
+<p><a href="./develEnvSetup.html">Use these instructions to set-up your development environment.</a></p>
 </div>
 </div>
 <div class="sect2">
@@ -213,7 +213,7 @@ email address.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-29 21:13:16 -0400
+Last updated 2022-08-31 16:10:41 -0400
 </div>
 </div>
 </body>
