update TA hrs for Labor Day

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 <p>TA hours for the first week will be Aug 30, Aug 31, and Sept 1 (Tue-Thu) from 6-10pm in Park 231!</p>
 </li>
 <li>
+<p>TA hours for Sunday, Sept 4 and Monday, Sept 5 will be 6-8pm</p>
+</li>
+<li>
 <p>Current week notes: <a href="#week01">Week 01</a></p>
 </li>
 </ul>
@@ -813,7 +816,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-31 12:49:16 -0400
+Last updated 2022-09-01 12:16:42 -0400
 </div>
 </div>
 </body>
