poliak slides: lecture 02

--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-sep05.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
+<p><a href="slides-azpoliak/lecture02_09_06.pdf">Lecture 02 slides (Poliak)</a></p>
+</li>
+<li>
 <p>Lab activity: Working with the command line</p>
 </li>
 </ul>
@@ -816,7 +819,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-01 12:16:42 -0400
+Last updated 2022-09-06 12:39:38 -0400
 </div>
 </div>
 </body>
