--- a/schedule.html
+++ b/schedule.html
@@ -516,6 +516,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-sep05.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
+<p><a href="slides-azpoliak/lecture02_09_06.pdf">Lecture 02 slides (Poliak)</a></p>
+</li>
+<li>
 <p>Lab activity: Working with the command line</p>
 </li>
 </ul>
@@ -846,7 +849,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-31 16:11:07 -0400
+Last updated 2022-09-06 12:40:31 -0400
 </div>
 </div>
 </body>
