--- a/index.html
+++ b/index.html
@@ -44,19 +44,13 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Lectures start the week of <strong>August 29th</strong>!</p>
-</li>
-<li>
 <p>You can install Java on your own laptop! <a href="develEnvSetup.html">See here for instructions</a>.</p>
 </li>
 <li>
-<p>TA hours for the first week will be Aug 30, Aug 31, and Sept 1 (Tue-Thu) from 6-10pm in Park 231!</p>
+<p><a href="asst01.html">Assignment 1</a> has been posted: <strong>Due September 15th</strong></p>
 </li>
 <li>
-<p>TA hours for Sunday, Sept 4 and Monday, Sept 5 will be 6-8pm</p>
-</li>
-<li>
-<p>Current week notes: <a href="#week01">Week 01</a></p>
+<p>Current week notes: <a href="#week02">Week 02</a></p>
 </li>
 </ul>
 </div>
@@ -165,7 +159,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 1.2 (<code>boolean</code>), Sec 1.3 (<code>if/else</code>)</p>
 </li>
 <li>
-<p><a href="asst02.html">Assignment 2</a>: <strong>Due September 22</strong></p>
+<p><a href=".html">Assignment 2</a>: <strong>Due September 22</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-sep12.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -191,7 +185,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 1.3 (<code>while</code> and <code>for</code> loops)</p>
 </li>
 <li>
-<p><a href="asst03.html">Assignment 3</a>: <strong>Due September 29th</strong></p>
+<p><a href=".html">Assignment 3</a>: <strong>Due September 29th</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-sep19.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -217,7 +211,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 1.4, 1.5, (Strings) 3.1</p>
 </li>
 <li>
-<p><a href="asst04.html">Assignment 4</a>: <strong>Due October 6</strong></p>
+<p><a href=".html">Assignment 4</a>: <strong>Due October 6</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-sep26.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -243,7 +237,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 2.1</p>
 </li>
 <li>
-<p><a href="asst05.html">Assignment 5</a>: <strong>Due October 20</strong></p>
+<p><a href=".html">Assignment 5</a>: <strong>Due October 20</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct03.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -280,7 +274,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 2.1</p>
 </li>
 <li>
-<p><a href="asst06.html">Assignment 6</a>: <strong>Due October 27</strong></p>
+<p><a href=".html">Assignment 6</a>: <strong>Due October 27</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct17.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -306,7 +300,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
 </li>
 <li>
-<p><a href="asst07.html">Assignment 7</a>: *Due *</p>
+<p><a href=".html">Assignment 7</a>: *Due *</p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct24.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -332,7 +326,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
 </li>
 <li>
-<p><a href="asst08.html">Assignment 8</a>: **</p>
+<p><a href=".html">Assignment 8</a>: **</p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct31.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -361,7 +355,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Presentations III: Arrays, strings, advanced IO</p>
 </li>
 <li>
-<p><a href="asst09.html">Assignment 9</a>: *Due *</p>
+<p><a href=".html">Assignment 9</a>: *Due *</p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-nov07.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -819,7 +813,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-06 12:39:38 -0400
+Last updated 2022-09-07 10:16:48 -0400
 </div>
 </div>
 </body>
