--- a/schedule.html
+++ b/schedule.html
@@ -536,7 +536,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 1.2 (<code>boolean</code>), Sec 1.3 (<code>if/else</code>)</p>
 </li>
 <li>
-<p><a href="asst02.html">Assignment 2</a>: <strong>Due September 22</strong></p>
+<p><a href=".html">Assignment 2</a>: <strong>Due September 22</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-sep12.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -562,7 +562,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 1.3 (<code>while</code> and <code>for</code> loops)</p>
 </li>
 <li>
-<p><a href="asst03.html">Assignment 3</a>: <strong>Due September 29th</strong></p>
+<p><a href=".html">Assignment 3</a>: <strong>Due September 29th</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-sep19.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -588,7 +588,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 1.4, 1.5, (Strings) 3.1</p>
 </li>
 <li>
-<p><a href="asst04.html">Assignment 4</a>: <strong>Due October 6</strong></p>
+<p><a href=".html">Assignment 4</a>: <strong>Due October 6</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-sep26.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -614,7 +614,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 2.1</p>
 </li>
 <li>
-<p><a href="asst05.html">Assignment 5</a>: <strong>Due October 20</strong></p>
+<p><a href=".html">Assignment 5</a>: <strong>Due October 20</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct03.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -651,7 +651,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 2.1</p>
 </li>
 <li>
-<p><a href="asst06.html">Assignment 6</a>: <strong>Due October 27</strong></p>
+<p><a href=".html">Assignment 6</a>: <strong>Due October 27</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct17.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -677,7 +677,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
 </li>
 <li>
-<p><a href="asst07.html">Assignment 7</a>: *Due *</p>
+<p><a href=".html">Assignment 7</a>: *Due *</p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct24.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -703,7 +703,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
 </li>
 <li>
-<p><a href="asst08.html">Assignment 8</a>: **</p>
+<p><a href=".html">Assignment 8</a>: **</p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct31.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -732,7 +732,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Presentations III: Arrays, strings, advanced IO</p>
 </li>
 <li>
-<p><a href="asst09.html">Assignment 9</a>: *Due *</p>
+<p><a href=".html">Assignment 9</a>: *Due *</p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-nov07.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -849,7 +849,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-06 12:40:31 -0400
+Last updated 2022-09-07 10:16:28 -0400
 </div>
 </div>
 </body>
