--- a/notes-alinen/notes-aug29.html
+++ b/notes-alinen/notes-aug29.html
@@ -22,13 +22,35 @@
 <div class="sect1">
 <h2 id="_notes_week_of_aug_29">Notes: Week of Aug 29</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p>Lecture Videos:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx?folderID=ac65eed4-0678-4e4f-9088-af02014f2f67">Part 1</a></p>
+</li>
+<li>
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=cb778f90-c712-43f5-b0e0-af0201501d9b">Part 2</a></p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Code:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/BrynMawr-CS113-F22/class-examples-normoyle/tree/main/week01-aug29">Lecture programs</a></p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 11:03:20 -0400
+Last updated 2022-09-07 16:10:24 -0400
 </div>
 </div>
 </body>
