--- a/notes-alinen/notes-sep05.html
+++ b/notes-alinen/notes-sep05.html
@@ -22,13 +22,24 @@
 <div class="sect1">
 <h2 id="_notes_week_of_sep05">Notes: Week of sep05</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p>Lecture Videos:</p>
+</div>
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=6315481a-4839-469f-b0ad-af0901385a0e">Wed</a></p>
+</div>
+<div class="paragraph">
+<p>Class Examples:</p>
+</div>
+<div class="paragraph">
+<p><a href="https://github.com/BrynMawr-CS113-F22/class-examples-normoyle/tree/main/week02-sep5">Lecture programs</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 11:13:32 -0400
+Last updated 2022-09-07 16:11:39 -0400
 </div>
 </div>
 </body>
