apoliak: lec3 slides

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-sep05.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture02_09_06.pdf">Lecture 02 slides (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture02_09_06.pdf">Lecture 02 slides (Poliak)</a> <a href="slides-azpoliak/lecture03_09_08.pdf">Lecture 03 slides (Poliak)</a></p>
 </li>
 <li>
 <p>Lab activity: Working with the command line</p>
@@ -813,7 +813,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-07 10:16:48 -0400
+Last updated 2022-09-07 10:30:50 -0400
 </div>
 </div>
 </body>
