--- a/schedule.html
+++ b/schedule.html
@@ -516,7 +516,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-sep05.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture02_09_06.pdf">Lecture 02 slides (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture02_09_06.pdf">Lecture 02 slides (Poliak)</a> <a href="slides-azpoliak/lecture03_09_08.pdf">Lecture 03 slides (Poliak)</a></p>
 </li>
 <li>
 <p>Lab activity: Working with the command line</p>
@@ -849,7 +849,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-07 10:16:28 -0400
+Last updated 2022-09-08 11:51:50 -0400
 </div>
 </div>
 </body>
