asst01: fixed named of files in what to hand in

--- a/asst01.html
+++ b/asst01.html
@@ -200,7 +200,7 @@ We have 3000 slugs in need of peaches and 110.3% of your love!</code></pre>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>The programs, <code>Menu.java</code>, <code>Cakes.java</code>, and <code>Calculator.java</code>.</p>
+<p>The programs, <code>Task.java</code>, <code>Calories.java</code>, and <code>Adopt.java</code>.</p>
 </li>
 <li>
 <p>Make sure each program has a header containing your name, date, and purpose of the program</p>
@@ -226,7 +226,7 @@ spent on the assignment, any customizations you made, and any interesting bugs y
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-07 10:14:45 -0400
+Last updated 2022-09-09 16:10:54 -0400
 </div>
 </div>
 </body>
