--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-sep12.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
+<p><a href="slides-azpoliak/lecture04_09_13.pdf">Lecture 04 slides (Poliak)</a></p>
+</li>
+<li>
 <p>Lab activity: Code Jam 01, <a href="jam1Guide.html">Jam 1 Study Guide</a></p>
 </li>
 </ul>
