--- a/schedule.html
+++ b/schedule.html
@@ -545,6 +545,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-sep12.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
+<p><a href="slides-azpoliak/lecture04_09_13.pdf">Lecture 04 slides (Poliak)</a></p>
+</li>
+<li>
 <p>Lab activity: Code Jam 01, <a href="jam1Guide.html">Jam 1 Study Guide</a></p>
 </li>
 </ul>
@@ -849,7 +852,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-08 11:51:50 -0400
+Last updated 2022-09-13 11:49:19 -0400
 </div>
 </div>
 </body>
