week03 lectures/examples

--- a/notes-alinen/notes-sep12.html
+++ b/notes-alinen/notes-sep12.html
@@ -22,13 +22,27 @@
 <div class="sect1">
 <h2 id="_notes_week_of_sep12">Notes: Week of sep12</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p>Lecture Videos:</p>
+</div>
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0f73c324-476a-4ca5-917d-af0e015fdb00">Mon</a></p>
+</div>
+<div class="paragraph">
+<p><a href="">Wed</a></p>
+</div>
+<div class="paragraph">
+<p>Class Examples:</p>
+</div>
+<div class="paragraph">
+<p><a href="https://github.com/BrynMawr-CS113-F22/class-examples-normoyle/tree/main/week03-sep12">Lecture programs</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 11:13:32 -0400
+Last updated 2022-09-14 12:51:58 -0400
 </div>
 </div>
 </body>
