--- a/notes-alinen/notes-sep12.html
+++ b/notes-alinen/notes-sep12.html
@@ -29,7 +29,7 @@
 <p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0f73c324-476a-4ca5-917d-af0e015fdb00">Mon</a></p>
 </div>
 <div class="paragraph">
-<p><a href="">Wed</a></p>
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=7f76624a-a865-4f24-9e23-af10014747f6">Wed</a></p>
 </div>
 <div class="paragraph">
 <p>Class Examples:</p>
@@ -42,7 +42,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-14 12:51:58 -0400
+Last updated 2022-09-14 16:00:23 -0400
 </div>
 </div>
 </body>
