--- a/schedule.html
+++ b/schedule.html
@@ -536,7 +536,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 1.2 (<code>boolean</code>), Sec 1.3 (<code>if/else</code>)</p>
 </li>
 <li>
-<p><a href=".html">Assignment 2</a>: <strong>Due September 22</strong></p>
+<p><a href="asst02.html">Assignment 2</a>: <strong>Due September 22</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-sep12.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -852,7 +852,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-13 11:49:19 -0400
+Last updated 2022-09-15 10:39:03 -0400
 </div>
 </div>
 </body>
