--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 <p><a href="asst01.html">Assignment 1</a> has been posted: <strong>Due September 15th</strong></p>
 </li>
 <li>
+<p><a href="asst02.html">Assignment 2</a> has been posted: <strong>Due September 22nd</strong></p>
+</li>
+<li>
 <p>Current week notes: <a href="#week02">Week 02</a></p>
 </li>
 </ul>
@@ -159,7 +162,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 1.2 (<code>boolean</code>), Sec 1.3 (<code>if/else</code>)</p>
 </li>
 <li>
-<p><a href=".html">Assignment 2</a>: <strong>Due September 22</strong></p>
+<p><a href="asst02.html">Assignment 2</a>: <strong>Due September 22</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-sep12.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -816,7 +819,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-13 16:49:27 -0400
+Last updated 2022-09-15 10:39:48 -0400
 </div>
 </div>
 </body>
