--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-sep12.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture04_09_13.pdf">Lecture 04 slides (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture04_09_13.pdf">Lecture 04 slides (Poliak)</a> <a href="/slides-azpoliak/lecture05_09_15.pdf">Lecture 05 slides (Poliak)</a></p>
 </li>
 <li>
 <p>Lab activity: Code Jam 01, <a href="jam1Guide.html">Jam 1 Study Guide</a></p>
