update notes; syllabus

--- a/notes-alinen/notes-sep19.html
+++ b/notes-alinen/notes-sep19.html
@@ -22,13 +22,18 @@
 <div class="sect1">
 <h2 id="_notes_week_of_sep19">Notes: Week of sep19</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=2c1c9663-1ea3-4af1-99ed-af15013b2ad1">Video - Mon</a></p>
+</div>
+<div class="paragraph">
+<p><a href="https://github.com/BrynMawr-CS113-F22/class-examples-normoyle/tree/main/week04-sep19">Lecture Examples</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 11:13:32 -0400
+Last updated 2022-09-19 15:12:25 -0400
 </div>
 </div>
 </body>
