--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="slides-azpoliak/lecture02_09_06.pdf">Lecture 02 slides (Poliak)</a> <a href="slides-azpoliak/lecture03_09_08.pdf">Lecture 03 slides (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: Working with the command line</p>
+<p>Lab activity: Code Jam 01 Practice, <a href="jam1Guide.html">Jam 1 Study Guide</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -200,7 +200,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-sep19.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: TBD</p>
+<p>Lab activity: Code Jam 02 Practice, <a href="jam2Guide.html">Jam 2 Study Guide</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -226,7 +226,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-sep26.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: TBD</p>
+<p>Lab activity: Code Jam 02, <a href="jam2Guide.html">Jam 2 Study Guide</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -252,7 +252,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-oct03.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: Code jam 02, <a href="jam2Guide.html">Jam 2 Study Guide</a></p>
+<p>Lab activity: TBD</p>
 </li>
 </ul>
 </div></div></td>
@@ -289,7 +289,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-oct17.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: TBD</p>
+<p>Lab activity: Code Jam 03 Practice</p>
 </li>
 </ul>
 </div></div></td>
@@ -341,7 +341,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-oct31.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: TBD</p>
+<p>Lab activity: Code Jam 04 Practice</p>
 </li>
 </ul>
 </div></div></td>
@@ -396,7 +396,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-nov14.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: TBD</p>
+<p>Lab activity: Code Jam 05 Practice</p>
 </li>
 </ul>
 </div></div></td>
@@ -440,6 +440,9 @@ on lecture content, worksheets, and assignments.</p>
 </li>
 <li>
 <p><a href="notes-azpoliak/notes-nov28.html">Lecture Notes and Resources (Poliak)</a></p>
+</li>
+<li>
+<p>Lab activity: Code Jam 06 Practice</p>
 </li>
 </ul>
 </div></div></td>
@@ -819,7 +822,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-15 10:39:48 -0400
+Last updated 2022-09-15 17:32:08 -0400
 </div>
 </div>
 </body>
