--- a/schedule.html
+++ b/schedule.html
@@ -519,7 +519,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="slides-azpoliak/lecture02_09_06.pdf">Lecture 02 slides (Poliak)</a> <a href="slides-azpoliak/lecture03_09_08.pdf">Lecture 03 slides (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: Working with the command line</p>
+<p>Lab activity: Code Jam 01 Practice, <a href="jam1Guide.html">Jam 1 Study Guide</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -574,7 +574,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-sep19.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: TBD</p>
+<p>Lab activity: Code Jam 02 Practice, <a href="jam2Guide.html">Jam 2 Study Guide</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -600,7 +600,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-sep26.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: TBD</p>
+<p>Lab activity: Code Jam 02, <a href="jam2Guide.html">Jam 2 Study Guide</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -626,7 +626,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-oct03.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: Code jam 02, <a href="jam2Guide.html">Jam 2 Study Guide</a></p>
+<p>Lab activity: TBD</p>
 </li>
 </ul>
 </div></div></td>
@@ -663,7 +663,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-oct17.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: TBD</p>
+<p>Lab activity: Code Jam 03 Practice</p>
 </li>
 </ul>
 </div></div></td>
@@ -715,7 +715,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-oct31.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: TBD</p>
+<p>Lab activity: Code Jam 04 Practice</p>
 </li>
 </ul>
 </div></div></td>
@@ -770,7 +770,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-nov14.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: TBD</p>
+<p>Lab activity: Code Jam 05 Practice</p>
 </li>
 </ul>
 </div></div></td>
@@ -815,6 +815,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="notes-azpoliak/notes-nov28.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
+<li>
+<p>Lab activity: Code Jam 06 Practice</p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -852,7 +855,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-15 12:37:26 -0400
+Last updated 2022-09-19 15:17:27 -0400
 </div>
 </div>
 </body>
