apoliak: lectuer 06 (arrays)

--- a/schedule.html
+++ b/schedule.html
@@ -545,7 +545,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-sep12.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture04_09_13.pdf">Lecture 04 slides (Poliak)</a> <a href="/slides-azpoliak/lecture05_09_15.pdf">Lecture 05 slides (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture04_09_13.pdf">Lecture 04 slides (Poliak)</a> <a href="slides-azpoliak/lecture05_09_15.pdf">Lecture 05 slides (Poliak)</a></p>
 </li>
 <li>
 <p>Lab activity: Code Jam 01, <a href="jam1Guide.html">Jam 1 Study Guide</a></p>
@@ -575,6 +575,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li>
 <p>Lab activity: Code Jam 02 Practice, <a href="jam2Guide.html">Jam 2 Study Guide</a></p>
+</li>
+<li>
+<p><a href="slides-azpoliak/lecture06_09_20.pdf">Lecture 06 slides (Poliak)</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -855,7 +858,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-19 15:17:27 -0400
+Last updated 2022-09-20 12:07:18 -0400
 </div>
 </div>
 </body>
