--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-sep12.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture04_09_13.pdf">Lecture 04 slides (Poliak)</a> <a href="/slides-azpoliak/lecture05_09_15.pdf">Lecture 05 slides (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture04_09_13.pdf">Lecture 04 slides (Poliak)</a> <a href="slides-azpoliak/lecture05_09_15.pdf">Lecture 05 slides (Poliak)</a></p>
 </li>
 <li>
 <p>Lab activity: Code Jam 01, <a href="jam1Guide.html">Jam 1 Study Guide</a></p>
@@ -201,6 +201,9 @@ on lecture content, worksheets, and assignments.</p>
 </li>
 <li>
 <p>Lab activity: Code Jam 02 Practice, <a href="jam2Guide.html">Jam 2 Study Guide</a></p>
+</li>
+<li>
+<p><a href="slides-azpoliak/lecture06_09_20.pdf">Lecture 06 slides (Poliak)</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -822,7 +825,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-15 17:32:08 -0400
+Last updated 2022-09-15 10:39:48 -0400
 </div>
 </div>
 </body>
