--- a/notes-alinen/notes-sep19.html
+++ b/notes-alinen/notes-sep19.html
@@ -26,6 +26,9 @@
 <p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=2c1c9663-1ea3-4af1-99ed-af15013b2ad1">Video - Mon</a></p>
 </div>
 <div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=35724404-c3eb-4313-b0e1-af17014310ad">Video - Wed</a></p>
+</div>
+<div class="paragraph">
 <p><a href="https://github.com/BrynMawr-CS113-F22/class-examples-normoyle/tree/main/week04-sep19">Lecture Examples</a></p>
 </div>
 </div>
@@ -33,7 +36,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-19 15:12:25 -0400
+Last updated 2022-09-22 11:30:43 -0400
 </div>
 </div>
 </body>
