--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 <p>You can install Java on your own laptop! <a href="develEnvSetup.html">See here for instructions</a>.</p>
 </li>
 <li>
-<p><a href="asst02.html">Assignment 2</a> has been posted: <strong>Due September 22nd</strong></p>
+<p><a href="asst03.html">Assignment 3</a> has been posted: <strong>Due September 29th</strong></p>
 </li>
 <li>
-<p>Current week notes: <a href="#week03">Week 03</a></p>
+<p>Current week notes: <a href="#week05">Week 05</a></p>
 </li>
 </ul>
 </div>
@@ -188,7 +188,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 1.3 (<code>while</code> and <code>for</code> loops)</p>
 </li>
 <li>
-<p><a href=".html">Assignment 3</a>: <strong>Due September 29th</strong></p>
+<p><a href="asst03.html">Assignment 3</a>: <strong>Due September 29th</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-sep19.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -822,7 +822,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-20 12:10:57 -0400
+Last updated 2022-09-22 11:31:21 -0400
 </div>
 </div>
 </body>
