--- a/schedule.html
+++ b/schedule.html
@@ -565,7 +565,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 1.3 (<code>while</code> and <code>for</code> loops)</p>
 </li>
 <li>
-<p><a href=".html">Assignment 3</a>: <strong>Due September 29th</strong></p>
+<p><a href="asst03.html">Assignment 3</a>: <strong>Due September 29th</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-sep19.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -858,7 +858,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-20 12:07:18 -0400
+Last updated 2022-09-22 11:31:38 -0400
 </div>
 </div>
 </body>
