--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Lab activity: Code Jam 02 Practice, <a href="jam2Guide.html">Jam 2 Study Guide</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture06_09_20.pdf">Lecture 06 slides (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture06_09_20.pdf">Lecture 06 slides (Poliak)</a> <a href="slides-azpoliak/lecture07_09_22.pdf">Lecture 07 slides (Poliak)</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -822,7 +822,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-22 11:31:21 -0400
+Last updated 2022-09-22 11:41:37 -0400
 </div>
 </div>
 </body>
