--- a/schedule.html
+++ b/schedule.html
@@ -577,7 +577,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Lab activity: Code Jam 02 Practice, <a href="jam2Guide.html">Jam 2 Study Guide</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture06_09_20.pdf">Lecture 06 slides (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture06_09_20.pdf">Lecture 06 slides (Poliak)</a> <a href="slides-azpoliak/lecture07_09_22.pdf">Lecture 07 slides (Poliak)</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -858,7 +858,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-22 11:31:38 -0400
+Last updated 2022-09-22 11:42:23 -0400
 </div>
 </div>
 </body>
