--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-oct03.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: TBD</p>
+<p>Lab activity: Code Jam 02 Review</p>
 </li>
 </ul>
 </div></div></td>
@@ -822,7 +822,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-22 11:41:37 -0400
+Last updated 2022-09-22 11:31:21 -0400
 </div>
 </div>
 </body>
