--- a/notes-alinen/notes-sep26.html
+++ b/notes-alinen/notes-sep26.html
@@ -22,13 +22,15 @@
 <div class="sect1">
 <h2 id="_notes_week_of_sep26">Notes: Week of sep26</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=1283c7be-4ef7-4507-9e72-af1c013ad593">Video - Mon</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 11:13:32 -0400
+Last updated 2022-09-26 21:02:11 -0400
 </div>
 </div>
 </body>
