--- a/schedule.html
+++ b/schedule.html
@@ -629,7 +629,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-oct03.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: TBD</p>
+<p>Lab activity: Code Jam 02 Review</p>
 </li>
 </ul>
 </div></div></td>
@@ -858,7 +858,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-22 11:42:23 -0400
+Last updated 2022-09-26 21:04:56 -0400
 </div>
 </div>
 </body>
