--- a/schedule.html
+++ b/schedule.html
@@ -594,7 +594,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 1.4, 1.5, (Strings) 3.1</p>
 </li>
 <li>
-<p><a href=".html">Assignment 4</a>: <strong>Due October 6</strong></p>
+<p><a href="asst04.html">Assignment 4</a>: <strong>Due October 6</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-sep26.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -858,7 +858,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-26 21:04:56 -0400
+Last updated 2022-09-28 11:33:36 -0400
 </div>
 </div>
 </body>
