--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 <p><a href="asst03.html">Assignment 3</a> has been posted: <strong>Due September 29th</strong></p>
 </li>
 <li>
+<p><a href="asst04.html">Assignment 4</a> has been posted: <strong>Due October 6th</strong></p>
+</li>
+<li>
 <p>Current week notes: <a href="#week05">Week 05</a></p>
 </li>
 </ul>
@@ -217,7 +220,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 1.4, 1.5, (Strings) 3.1</p>
 </li>
 <li>
-<p><a href=".html">Assignment 4</a>: <strong>Due October 6</strong></p>
+<p><a href="asst04.html">Assignment 4</a>: <strong>Due October 6</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-sep26.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -822,7 +825,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-22 11:31:21 -0400
+Last updated 2022-09-28 11:34:08 -0400
 </div>
 </div>
 </body>
