post notes/links

--- a/notes-alinen/notes-sep26.html
+++ b/notes-alinen/notes-sep26.html
@@ -25,12 +25,18 @@
 <div class="paragraph">
 <p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=1283c7be-4ef7-4507-9e72-af1c013ad593">Video - Mon</a></p>
 </div>
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=d386b561-fd9b-4866-807e-af1e0137cdd9">Video - Wed</a></p>
+</div>
+<div class="paragraph">
+<p><a href="https://github.com/BrynMawr-CS113-F22/class-examples-normoyle/tree/main/week05-sep26">Class examples</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-26 21:02:11 -0400
+Last updated 2022-10-03 15:07:20 -0400
 </div>
 </div>
 </body>
