apoliak slides: lecture 09 functions

--- a/index.html
+++ b/index.html
@@ -255,6 +255,9 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-oct03.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
+<p><a href="slides-azpoliak/lecture08_09_29.pdf">Lecture 09 (Poliak)</a></p>
+</li>
+<li>
 <p>Lab activity: Code Jam 02 Review</p>
 </li>
 </ul>
@@ -825,7 +828,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-03 15:07:48 -0400
+Last updated 2022-10-04 11:42:16 -0400
 </div>
 </div>
 </body>
