--- a/schedule.html
+++ b/schedule.html
@@ -632,6 +632,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-oct03.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
+<p><a href="slides-azpoliak/lecture08_09_29.pdf">Lecture 09 (Poliak)</a></p>
+</li>
+<li>
 <p>Lab activity: Code Jam 02 Review</p>
 </li>
 </ul>
@@ -861,7 +864,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-03 15:07:33 -0400
+Last updated 2022-10-04 12:28:07 -0400
 </div>
 </div>
 </body>
