post videos/code

--- a/notes-alinen/notes-oct03.html
+++ b/notes-alinen/notes-oct03.html
@@ -22,13 +22,18 @@
 <div class="sect1">
 <h2 id="_notes_week_of_oct03">Notes: Week of oct03</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=20adb778-4e4d-4bb4-9c8f-af250156b054">Video - Wed</a></p>
+</div>
+<div class="paragraph">
+<p><a href="https://github.com/BrynMawr-CS113-F22/class-examples-normoyle/tree/main/week06-oct3">Class examples</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 11:13:32 -0400
+Last updated 2022-10-05 20:00:23 -0400
 </div>
 </div>
 </body>
