poliak lec 10 slides

--- a/schedule.html
+++ b/schedule.html
@@ -632,7 +632,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-oct03.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture08_09_29.pdf">Lecture 09 (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture08_09_29.pdf">Lecture 09 (Poliak)</a> <a href="slides-azpoliak/lecture10_10_06.pdf">Lecture 10 (Poliak)</a></p>
 </li>
 <li>
 <p>Lab activity: Code Jam 02 Review</p>
@@ -864,7 +864,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-05 19:58:20 -0400
+Last updated 2022-10-06 12:47:01 -0400
 </div>
 </div>
 </body>
