--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 <p>You can install Java on your own laptop! <a href="develEnvSetup.html">See here for instructions</a>.</p>
 </li>
 <li>
-<p><a href="asst04.html">Assignment 4</a> has been posted: <strong>Due October 6th</strong></p>
+<p><a href="asst05.html">Assignment 5</a> has been posted: <strong>Due October 20th</strong></p>
 </li>
 <li>
-<p>Current week notes: <a href="#week05">Week 06</a></p>
+<p>Current week notes: <a href="#week07">Week 07</a></p>
 </li>
 </ul>
 </div>
@@ -246,7 +246,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 2.1</p>
 </li>
 <li>
-<p><a href=".html">Assignment 5</a>: <strong>Due October 20</strong></p>
+<p><a href="asst05.html">Assignment 5</a>: <strong>Due October 20</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct03.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -828,7 +828,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-04 11:42:16 -0400
+Last updated 2022-10-10 17:53:09 -0400
 </div>
 </div>
 </body>
