--- a/schedule.html
+++ b/schedule.html
@@ -623,7 +623,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 2.1</p>
 </li>
 <li>
-<p><a href=".html">Assignment 5</a>: <strong>Due October 20</strong></p>
+<p><a href="asst05.html">Assignment 5</a>: <strong>Due October 20</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct03.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -864,7 +864,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-06 12:47:01 -0400
+Last updated 2022-10-10 17:52:30 -0400
 </div>
 </div>
 </body>
