--- a/asst05.html
+++ b/asst05.html
@@ -185,6 +185,9 @@ your choice --></code></pre>
 <h2 id="_patterns">Patterns</h2>
 <div class="sectionbody">
 <div class="paragraph">
+<p><em>credit: Jeffrey Knerr</em></p>
+</div>
+<div class="paragraph">
 <p>This program will use various functions to draw patterns in the terminal
 window. We&#8217;ll write and test each function as we go, then use the
 <code>menu(opts)</code> function from above to allow the user to pick which
@@ -524,7 +527,7 @@ you implemented!</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-10 17:51:47 -0400
+Last updated 2022-10-10 17:56:49 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
