--- a/index.html
+++ b/index.html
@@ -278,12 +278,12 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">7</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Oct 17th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Functions</strong> <a id="week07"></a></p>
+<p><strong>Object oriented programming</strong> <a id="week07"></a></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: Sedgewick and Wayne, Sec 2.1</p>
+<p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
 </li>
 <li>
 <p><a href=".html">Assignment 6</a>: <strong>Due October 27</strong></p>
@@ -312,7 +312,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
 </li>
 <li>
-<p><a href=".html">Assignment 7</a>: *Due *</p>
+<p><a href=".html">Assignment 7</a>: <strong>Due Nov 3</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct24.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -330,7 +330,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of October 31st</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Objects oriented programming: creating objects</strong> <a id="week09"></a></p>
+<p><strong>Object oriented programming: creating objects</strong> <a id="week09"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -338,7 +338,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
 </li>
 <li>
-<p><a href=".html">Assignment 8</a>: **</p>
+<p><a href=".html">Assignment 8</a>: <strong>Due Nov 10</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct31.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -367,7 +367,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Presentations III: Arrays, strings, advanced IO</p>
 </li>
 <li>
-<p><a href=".html">Assignment 9</a>: *Due *</p>
+<p><a href=".html">Assignment 9</a>: <strong>Due Nov 17</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-nov07.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -391,6 +391,9 @@ on lecture content, worksheets, and assignments.</p>
 <ul>
 <li>
 <p>Read: Sedgewick and Wayne, Sec 2.3</p>
+</li>
+<li>
+<p><a href=".html">Assignment 10</a>: <strong>Due Dec 1st</strong></p>
 </li>
 <li>
 <p><a href="jam4Guide.html">Jam 4 Guide</a></p>
@@ -440,6 +443,9 @@ on lecture content, worksheets, and assignments.</p>
 <ul>
 <li>
 <p>Read: Sedgewick and Wayne, Sec 4.4</p>
+</li>
+<li>
+<p><a href=".html">Assignment 11</a>: <strong>Due Dec 8</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-nov28.html">Lecture Notes and Resources (Normoyle)</a></p>
