--- a/schedule.html
+++ b/schedule.html
@@ -655,12 +655,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">7</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Oct 17th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Functions</strong> <a id="week07"></a></p>
+<p><strong>Object oriented programming</strong> <a id="week07"></a></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: Sedgewick and Wayne, Sec 2.1</p>
+<p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
 </li>
 <li>
 <p><a href=".html">Assignment 6</a>: <strong>Due October 27</strong></p>
@@ -689,7 +689,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
 </li>
 <li>
-<p><a href=".html">Assignment 7</a>: *Due *</p>
+<p><a href=".html">Assignment 7</a>: <strong>Due Nov 3</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct24.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -707,7 +707,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of October 31st</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Objects oriented programming: creating objects</strong> <a id="week09"></a></p>
+<p><strong>Object oriented programming: creating objects</strong> <a id="week09"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -715,7 +715,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
 </li>
 <li>
-<p><a href=".html">Assignment 8</a>: **</p>
+<p><a href=".html">Assignment 8</a>: <strong>Due Nov 10</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct31.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -744,7 +744,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Presentations III: Arrays, strings, advanced IO</p>
 </li>
 <li>
-<p><a href=".html">Assignment 9</a>: *Due *</p>
+<p><a href=".html">Assignment 9</a>: <strong>Due Nov 17</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-nov07.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -768,6 +768,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul>
 <li>
 <p>Read: Sedgewick and Wayne, Sec 2.3</p>
+</li>
+<li>
+<p><a href=".html">Assignment 10</a>: <strong>Due Dec 1st</strong></p>
 </li>
 <li>
 <p><a href="jam4Guide.html">Jam 4 Guide</a></p>
@@ -819,6 +822,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 4.4</p>
 </li>
 <li>
+<p><a href=".html">Assignment 11</a>: <strong>Due Dec 8</strong></p>
+</li>
+<li>
 <p><a href="notes-alinen/notes-nov28.html">Lecture Notes and Resources (Normoyle)</a></p>
 </li>
 <li>
@@ -864,7 +870,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-10 17:52:30 -0400
+Last updated 2022-10-11 10:44:52 -0400
 </div>
 </div>
 </body>
