--- a/schedule.html
+++ b/schedule.html
@@ -707,12 +707,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of October 31st</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Object oriented programming: creating objects</strong> <a id="week09"></a></p>
+<p><strong>Search and sort</strong> <a id="week09"></a></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
+<p>Read: Sedgewick and Wayne, Sec 4.2</p>
 </li>
 <li>
 <p><a href=".html">Assignment 8</a>: <strong>Due Nov 10</strong></p>
@@ -733,15 +733,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 7th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Search and sort</strong> <a id="week10"></a></p>
+<p><strong>Search and sort, Runtime analysis</strong> <a id="week10"></a></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
 <p>Read: Sedgewick and Wayne, Sec 4.2</p>
-</li>
-<li>
-<p>Presentations III: Arrays, strings, advanced IO</p>
 </li>
 <li>
 <p><a href=".html">Assignment 9</a>: <strong>Due Nov 17</strong></p>
@@ -762,7 +759,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">11</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 14th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>More search and sort; Runtime analysis</strong> <a id="week11"></a></p>
+<p><strong>Recursion</strong> <a id="week11"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -791,10 +788,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 21st</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Recursion</strong> <a id="week12"></a></p>
+<p><strong>Data structures: List, Hashmap and Dictionary</strong> <a id="week12"></a></p>
 </div>
 <div class="ulist">
 <ul>
+<li>
+<p>Read: Sedgewick and Wayne, Sec 4.4</p>
+</li>
 <li>
 <p><strong>NO CLASS THURSDAY, NOV 24th</strong></p>
 </li>
@@ -814,7 +814,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 28th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Data structures: List and Dictionary</strong> <a id="week13"></a></p>
+<p><strong>Data structures: List, Hashmap and Dictionary</strong> <a id="week13"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -840,13 +840,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">14</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Dec 5th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Final Thoughts. ArrayList, HashMap and Dictionary</strong> <a id="week14"></a></p>
+<p><strong>Final Thoughts</strong> <a id="week14"></a></p>
 </div>
 <div class="ulist">
 <ul>
-<li>
-<p>Read: Sedgewick and Wayne, Sec 4.4</p>
-</li>
 <li>
 <p><a href="jam5Guide.html">Final exam guide</a></p>
 </li>
@@ -870,7 +867,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-11 10:44:52 -0400
+Last updated 2022-10-11 13:21:41 -0400
 </div>
 </div>
 </body>
