--- a/notes-alinen/notes-oct17.html
+++ b/notes-alinen/notes-oct17.html
@@ -22,13 +22,15 @@
 <div class="sect1">
 <h2 id="_notes_week_of_oct17">Notes: Week of oct17</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=96d564e8-277a-43ef-8b90-af31014f9f03">Lecture - Monday</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 11:13:32 -0400
+Last updated 2022-10-17 16:23:57 -0400
 </div>
 </div>
 </body>
