--- a/notes-alinen/notes-oct17.html
+++ b/notes-alinen/notes-oct17.html
@@ -25,12 +25,18 @@
 <div class="paragraph">
 <p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=96d564e8-277a-43ef-8b90-af31014f9f03">Lecture - Monday</a></p>
 </div>
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=3c84defb-4199-46a9-bd2d-af3400f4fe0b">Lecture - Wednesday</a></p>
+</div>
+<div class="paragraph">
+<p><a href="https://github.com/BrynMawr-CS113-F22/class-examples-normoyle/tree/main/week08-oct17">Class Examples</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-17 16:23:57 -0400
+Last updated 2022-10-20 10:58:47 -0400
 </div>
 </div>
 </body>
