--- a/index.html
+++ b/index.html
@@ -295,6 +295,9 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-oct17.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
+<p><a href="slides-azpoliak/lecture11_20_06.pdf">Lecture 11 (Poliak)</a></p>
+</li>
+<li>
 <p>Lab activity: Code Jam 03 Practice</p>
 </li>
 </ul>
@@ -831,7 +834,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-10 17:53:09 -0400
+Last updated 2022-10-20 12:48:44 -0400
 </div>
 </div>
 </body>
