--- a/schedule.html
+++ b/schedule.html
@@ -672,6 +672,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-oct17.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
+<p><a href="slides-azpoliak/lecture11_20_06.pdf">Lecture 11 (Poliak)</a></p>
+</li>
+<li>
 <p>Lab activity: Code Jam 03 Practice</p>
 </li>
 </ul>
@@ -867,7 +870,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-11 13:21:41 -0400
+Last updated 2022-10-20 12:50:17 -0400
 </div>
 </div>
 </body>
