--- a/schedule.html
+++ b/schedule.html
@@ -663,7 +663,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
 </li>
 <li>
-<p><a href=".html">Assignment 6</a>: <strong>Due October 27</strong></p>
+<p><a href="ass06.html">Assignment 6</a>: <strong>Due October 27</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct17.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -870,7 +870,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-21 08:00:30 -0400
+Last updated 2022-10-23 10:10:39 -0400
 </div>
 </div>
 </body>
