--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 <p>You can install Java on your own laptop! <a href="develEnvSetup.html">See here for instructions</a>.</p>
 </li>
 <li>
-<p><a href="asst05.html">Assignment 5</a> has been posted: <strong>Due October 20th</strong></p>
+<p><a href="asst06.html">Assignment 6</a> has been posted: <strong>Due October 27th</strong></p>
 </li>
 <li>
-<p>Current week notes: <a href="#week07">Week 07</a></p>
+<p>Current week notes: <a href="#week08">Week 08</a></p>
 </li>
 </ul>
 </div>
@@ -286,7 +286,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
 </li>
 <li>
-<p><a href=".html">Assignment 6</a>: <strong>Due October 27</strong></p>
+<p><a href="ass06.html">Assignment 6</a>: <strong>Due October 27</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct17.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -834,7 +834,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-20 12:48:44 -0400
+Last updated 2022-10-23 10:10:06 -0400
 </div>
 </div>
 </body>
