update submission instructions

--- a/asst06.html
+++ b/asst06.html
@@ -266,7 +266,7 @@ your original ideas and features in your readme. Below are ideas</p>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>The program, <code>Minesweeper.java</code>, and if applicable, <code>MyMinesweeper.java</code></p>
+<p>The programs, <code>Board.java</code> and <code>Minesweeper.java</code>, and if applicable, <code>MyMinesweeper.java</code></p>
 </li>
 <li>
 <p>Make sure your program has a header containing your name, date, and purpose of the program</p>
@@ -293,7 +293,7 @@ customizations you made for your game!!</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-11 13:01:30 -0400
+Last updated 2022-10-24 08:02:12 -0400
 </div>
 </div>
 </body>
