post final exam info

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 <li>
 <p>Current week notes: <a href="#week08">Week 08</a></p>
 </li>
+<li>
+<p>The final exam with be <a href="https://www.brynmawr.edu/inside/academic-information/registrar/undergraduates/classes-exams/about-final-exams">self-scheduled</a> during finals week (December 11th - December 16th). <a href="https://www.brynmawr.edu/sites/default/files/media/documents/2022-10/SS%20Exam%20Schedule.pdf">Click here for the self-scheduled exam times.</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -834,7 +837,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-23 10:10:06 -0400
+Last updated 2022-10-24 12:27:43 -0400
 </div>
 </div>
 </body>
