--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
 </li>
 <li>
-<p><a href="ass06.html">Assignment 6</a>: <strong>Due October 27</strong></p>
+<p><a href="asst06.html">Assignment 6</a>: <strong>Due October 27</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct17.html">Lecture Notes and Resources (Normoyle)</a></p>
