--- a/notes-alinen/notes-oct24.html
+++ b/notes-alinen/notes-oct24.html
@@ -22,13 +22,18 @@
 <div class="sect1">
 <h2 id="_notes_week_of_oct24">Notes: Week of oct24</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=6f7be79e-d21e-4bdf-96df-af38013aabde">Lecture - Mon</a></p>
+</div>
+<div class="paragraph">
+<p><a href="https://github.com/BrynMawr-CS113-F22/class-examples-normoyle/tree/main/week09-oct24">Class Examples</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 11:13:32 -0400
+Last updated 2022-10-24 15:08:10 -0400
 </div>
 </div>
 </body>
