--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-oct24.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture12_10_25">Lecture 12 (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture12_10_25.pdf">Lecture 12 (Poliak)</a></p>
 </li>
 <li>
 <p>Lab activity: Code jam 03, <a href="jam3Guide.html">Jam 3 Study Guide</a></p>
