clarify bomb placement

--- a/asst06.html
+++ b/asst06.html
@@ -126,7 +126,7 @@ X X X X X 4 X X</code></pre>
 <p>You should use a 2D array to store the board. We recommend using a 2D array of integers, where each cell contains the count of neighboring bombs. If the cell contains a bomb, you can use a special value, such as -1, to denote it.</p>
 </li>
 <li>
-<p>To decide whether a cell includes a bomb, use <code>Math.random</code> and test whether the value is less than the given probability.</p>
+<p>To decide whether a cell includes a bomb, use <code>Math.random</code> and test whether the value is less than the given probability, e.g. for each cell, generate a random number. if the the value is less than <code>p</code>, place a bomb in that cell.</p>
 </li>
 </ul>
 </div>
@@ -293,7 +293,7 @@ customizations you made for your game!!</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-24 08:02:12 -0400
+Last updated 2022-10-25 14:44:32 -0400
 </div>
 </div>
 </body>
