--- a/notes-alinen/notes-oct24.html
+++ b/notes-alinen/notes-oct24.html
@@ -26,6 +26,9 @@
 <p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=6f7be79e-d21e-4bdf-96df-af38013aabde">Lecture - Mon</a></p>
 </div>
 <div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=d51a6974-b770-4605-b9d9-af3b00de2331">Lecture - Wed</a></p>
+</div>
+<div class="paragraph">
 <p><a href="https://github.com/BrynMawr-CS113-F22/class-examples-normoyle/tree/main/week09-oct24">Class Examples</a></p>
 </div>
 </div>
@@ -33,7 +36,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-24 15:08:10 -0400
+Last updated 2022-10-27 09:30:52 -0400
 </div>
 </div>
 </body>
