azpoliak: slides lec 13

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-oct24.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture12_10_25.pdf">Lecture 12 (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture12_10_25.pdf">Lecture 12 (Poliak)</a> <a href="slides-azpoliak/lecture13_10_27.pdf">Lecture 13 (Poliak)</a></p>
 </li>
 <li>
 <p>Lab activity: Code jam 03, <a href="jam3Guide.html">Jam 3 Study Guide</a></p>
@@ -840,7 +840,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-24 12:27:43 -0400
+Last updated 2022-10-24 14:44:14 -0400
 </div>
 </div>
 </body>
