--- a/schedule.html
+++ b/schedule.html
@@ -701,7 +701,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-oct24.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture12_10_25.pdf">Lecture 12 (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture12_10_25.pdf">Lecture 12 (Poliak)</a> <a href="slides-azpoliak/lecture13_10_27.pdf">Lecture 13 (Poliak)</a></p>
 </li>
 <li>
 <p>Lab activity: Code jam 03, <a href="jam3Guide.html">Jam 3 Study Guide</a></p>
@@ -873,7 +873,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-25 14:45:15 -0400
+Last updated 2022-10-27 12:03:48 -0400
 </div>
 </div>
 </body>
