--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <p>You can install Java on your own laptop! <a href="develEnvSetup.html">See here for instructions</a>.</p>
 </li>
 <li>
-<p><a href="asst06.html">Assignment 6</a> has been posted: <strong>Due October 27th</strong></p>
+<p><a href="asst07.html">Assignment 7</a> has been posted: <strong>Due November 3rd</strong></p>
 </li>
 <li>
 <p>Current week notes: <a href="#week08">Week 08</a></p>
@@ -840,7 +840,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-24 14:44:14 -0400
+Last updated 2022-10-28 10:32:41 -0400
 </div>
 </div>
 </body>
