--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
 </li>
 <li>
-<p><a href=".html">Assignment 7</a>: <strong>Due Nov 3</strong></p>
+<p><a href="asst07.html">Assignment 7</a>: <strong>Due Nov 3</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct24.html">Lecture Notes and Resources (Normoyle)</a></p>
