--- a/schedule.html
+++ b/schedule.html
@@ -692,7 +692,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
 </li>
 <li>
-<p><a href=".html">Assignment 7</a>: <strong>Due Nov 3</strong></p>
+<p><a href="asst07.html">Assignment 7</a>: <strong>Due Nov 3</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct24.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -873,7 +873,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-27 12:03:48 -0400
+Last updated 2022-10-28 10:35:39 -0400
 </div>
 </div>
 </body>
