--- a/asst07.html
+++ b/asst07.html
@@ -55,6 +55,9 @@
 board</a>, a program for playing short sound clips.</p>
 </div>
 <div class="paragraph">
+<p>You can download the data needed for this assignment from this <a href="https://brynmawr-cs113-f22.github.io/website/data/asst07/asst07.zip">link</a>.</p>
+</div>
+<div class="paragraph">
 <p>We will use classes to organize our program. The <code>Sound</code> class will represent
 individual clips, stored in a WAV file. The <code>SoundLibrary</code> class will manage
 a list of <code>Sound</code> objects. The full program, <code>SoundBoard</code>, will
@@ -373,7 +376,7 @@ spent on the assignment and any interesting bugs you solved.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-28 10:34:55 -0400
+Last updated 2022-10-30 13:41:35 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
