poliak slides lec 14

--- a/index.html
+++ b/index.html
@@ -356,6 +356,9 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-oct31.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
+<p><a href="slides-azpoliak/lecture14_11_01.pdf">Lecture 14 (Poliak)</a></p>
+</li>
+<li>
 <p>Lab activity: Code Jam 04 Practice</p>
 </li>
 </ul>
