poliak slides: lec 15

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-oct31.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture14_11_01.pdf">Lecture 14 (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture14_11_01.pdf">Lecture 14 (Poliak)</a> <a href="slides-azpoliak/lecture15_11_03.pdf">Lecture 15 (Poliak)</a></p>
 </li>
 <li>
 <p>Lab activity: Code Jam 04 Practice</p>
