--- a/schedule.html
+++ b/schedule.html
@@ -730,7 +730,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-oct31.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture14_11_01.pdf">Lecture 14 (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture14_11_01.pdf">Lecture 14 (Poliak)</a> <a href="slides-azpoliak/lecture15_11_03.pdf">Lecture 15 (Poliak)</a></p>
 </li>
 <li>
 <p>Lab activity: Code Jam 04 Practice</p>
@@ -876,7 +876,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-01 12:49:36 -0400
+Last updated 2022-11-03 12:12:26 -0400
 </div>
 </div>
 </body>
